--- a/index.html
+++ b/index.html
@@ -6,17 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CL JS</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
 </head> 
 <body>
-    <nav class="menu">
+    <nav class="menu" id="menu">
     </nav>
-
-    <!-- <nav class="menu menu_vertical">
-        <span>Item 1</span>
-        <span>Item 2</span>
-        <span>Item 3</span>
-        <span>Item 4</span>
-    </nav> -->
+    <script src="script.js"></script>
 </body>
 </html>
